V1 Portfolio. Bunch of changes

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,8 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "headers";
+@import "footer";
+@import "links";
+@import "about";
+@import "border";
