--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,28 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
-}
+// .navbar-lewagon {
+//   justify-content: space-between;
+//   background: white;
+// }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+// .navbar-lewagon .navbar-brand img {
+//   width: 40px;
+// }
+
+.portfolio-nav {
+  font-size: 2rem;
+  font-weight: 600;
+  .active {
+    color: #140F2D;
+  }
+  a {
+    padding-right: 1.1rem;
+    color: gray;
+    font-size: 1.4rem;
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
