--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -7,11 +7,11 @@
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
 $body-bg:                 $light-gray;
-$font-size-base: 1rem;
+$font-size-base: 1.1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
+$primary:    $primary;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
