--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="d-flex flex-column">
+  <h2>I'm Sean O'Reilly, a web developer from Kansas City, USA 👋</h2>
+  <p>I love building performant, maintainable web applications with Ruby, Rails, while continuing to add tools like react and other technologies to my knowledge, and also writing about my experiences with working remotely while travelling the world.</p>
+  <p>A recent graduate from the acclaimed <span> <a href="https://www.lewagon.com/mexico" target="_blank" style="color: inherit; text-decoration-color: rgb(255, 36, 0);">Le Wagon</a></span> international bootcamp, I come prepared and excited to grow and learn as a developer.</p>
+  <p>Have a project you think we'd work well on together? Get in touch!</p>
+
+  <h3>Projects I've worked on recently</h3>
+
+  <p><a href="https://www.booklub.xyz/" target="_blank">Booklub: </a>The easiest book club app in the world</p>
+  <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal: </a>Connecting educators with young learners</p>
+  <p><a href="#">Mr. Cocktail: </a>An mvp app to track cocktail recipes</p>
+  <p><a href="#">Rails Task Manager: </a>Keep track of you day to day tasks with this simple keep clone</p>
+  <p><a href="#">Rails Yelp MVP: </a>A basic mvp to list and locate restaurants</p>
+  <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
+</div>
