--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,9 @@
 footer {
   a {
     font-size: 1.7rem;
-    padding: 0px .1rem;
+    padding: 0px 0.1rem;
   }
+}
+.footer-links a {
+  color: blueviolet;
 }
