--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 <div class="d-flex flex-column">
 
   <h2>About me</h2>
-  <h3>teacher / developer / learner / </h3>
+  <h3>teacher / developer / student </h3>
   <%= image_tag "profile.jpg", style: "width: 45vw;" %>
   <br>
   <p>Hey there! I’m Sean O'Reilly.</p>
