--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,9 @@
 <footer class="text-center my-5">
-  <a href="https://www.instagram.com/sea.oreilly/" target="_blank">📸</a>
-  <a href="https://github.com/seano424" target="_blank">🐙</a>
-  <a href="https://www.linkedin.com/in/sean--p-oreilly/" target="_blank">🌐</a>
-  <a href="https://twitter.com/seaoreilly" target="_blank">🦜</a>
   <p class="pt-3">© 2020 Sean O'Reilly. All rights reserved.</p>
+  <div class="footer-links">
+    <a href="https://www.instagram.com/sea.oreilly/" target="_blank"><i class="pr-2 fab fa-instagram"></i></a>
+    <a href="https://github.com/seano424" target="_blank"><i class="pr-2 fab fa-github-square"></i></a>
+    <a href="https://www.linkedin.com/in/sean--p-oreilly/" target="_blank"><i class="pr-2 fab fa-linkedin"></i></a>
+    <a href="https://twitter.com/seaoreilly" target="_blank"><i class="fab fa-twitter"></i></a>
+  </div>
 </footer>
