--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,8 @@
 @import "headers";
 @import "footer";
 @import "links";
-@import "about";
+@import "span";
 @import "border";
 @import "circle";
+@import "button";
 @import "card";
