--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,6 +2,6 @@
   <%= f.input :name, label: 'Your name please', error: 'Username is mandatory, please specify one' %>
   <%= f.input :email, placeholder: 'heysean@gmail.com' %>
   <%= f.input :message, :as => :text, :input_html => { 'rows' => 5, 'cols' => 10 } %>
-  <%= f.button :submit, 'Send me a whatsup :)', class: 'btn btn-primary' %>
+  <%= f.button :submit, 'Get in touch', class: 'btn btn-secondary button' %>
 
 <% end %>
