--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <div class="d-flex flex-column">
   <h2>I'm Sean O'Reilly, a web developer from Kansas City, USA 👋</h2>
-  <p>I love building performant, maintainable web applications with Ruby, Rails, while continuing to add tools like react and other technologies to my knowledge, and also writing about my experiences with working remotely while travelling the world.</p>
+  <p>I love building performant, maintainable web applications with <span>Ruby on Rails</span>, while continuing to add tools like <span>React</span>, <span>JS</span>, and other technologies to my knowledge, and also writing about my experiences with working remotely while travelling the world.</p>
   <p>A recent graduate from the acclaimed <span> <a href="https://www.lewagon.com/mexico" target="_blank" style="color: inherit; text-decoration-color: rgb(255, 36, 0);">Le Wagon</a></span> international bootcamp, I come prepared and excited to grow and learn as a developer.</p>
   <p>Have a project you think we'd work well on together? Get in touch!</p>
 
