--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,4 +1,7 @@
-<h1>Projects Page</h1>
+<div class="border-bottom">
+  <h1>Projects Page</h1>
+  <div id="hr-top" class="circle-line"></div>
+</div>
 
 <div class="py-3">
   <div class="my-card py-4 mb-4 border-bottom">
