--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="footer-links">
     <a href="https://www.instagram.com/sea.oreilly/" target="_blank"><i class="pr-2 fab fa-instagram"></i></a>
     <a href="https://github.com/seano424" target="_blank"><i class="pr-2 fab fa-github-square"></i></a>
-    <a href="https://www.linkedin.com/in/sean--p-oreilly/" target="_blank"><i class="pr-2 fab fa-linkedin"></i></a>
-    <a href="https://twitter.com/seaoreilly" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/sea-oreilly/" target="_blank"><i class="pr-2 fab fa-linkedin"></i></a>
+    <a href="https://twitter.com/sea_oreilly" target="_blank"><i class="fab fa-twitter"></i></a>
   </div>
 </footer>
