appended image assets to have jpg at the end

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -7,7 +7,7 @@
   <div class="my-card py-4 mb-4 border-bottom">
     <div class="row">
       <div class="d-sm-none d-md-block col-md-4">
-        <%= image_tag "booklub", style: 'width:15vw;', class: "my-card-image" %>
+        <%= image_tag "booklub.jpg", style: 'width:15vw;', class: "my-card-image" %>
       </div>
       <div class="col-md-8 col-12 my-card-content">
         <div class="title d-flex">
@@ -22,7 +22,7 @@
   <div class="my-card py-4 mb-4 border-bottom">
     <div class="row">
       <div class="d-sm-none d-md-block col-md-4">
-        <%= image_tag "schoolgoal", style: 'width:15vw;', class: "my-card-image" %>
+        <%= image_tag "schoolgoal.jpg", style: 'width:15vw;', class: "my-card-image" %>
       </div>
       <div class="col-md-8 col-12 my-card-content">
         <div class="title d-flex">
@@ -37,7 +37,7 @@
   <div class="my-card py-4 mb-4 border-bottom">
     <div class="row">
       <div class="d-sm-none d-md-block col-md-4">
-        <%= image_tag "mr-cocktail", style: 'width:15vw;', class: "my-card-image" %>
+        <%= image_tag "mr-cocktail.jpg", style: 'width:15vw;', class: "my-card-image" %>
       </div>
       <div class="col-md-8 col-12 my-card-content">
         <div class="title d-flex">
