appended image assets to have png and jpg at the end

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -12,7 +12,7 @@
       <div class="col-md-8 col-12 my-card-content">
         <div class="title d-flex">
           <h4 class="pr-2"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
-          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
+          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku.png", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
         </div>   
         <p>In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby on Rails app, deployed on heroku, using PostgreSQL. This is an app designed to bring book enthusiasts together with distance book clubs.</p>
       </div>
@@ -27,7 +27,7 @@
       <div class="col-md-8 col-12 my-card-content">
         <div class="title d-flex">
           <h4 class="pr-2"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
-          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
+          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku.jpg", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
         </div>
         <p>The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and Diana Pinon. This app was made with care by Ruby and Rails, deployed with Heroku. This app brings teachers and students together for niche distance learning.</p>
       </div>
@@ -42,7 +42,7 @@
       <div class="col-md-8 col-12 my-card-content">
         <div class="title d-flex">
           <h4 class="pr-2 d-flex"><a href="#" style="width: 12vw;">Mr. Cocktail</a></h4>
-          <p><i class="fab fa-css3 pr-2"></i><%= image_tag "ruby", title: "Ruby", style: 'width: 8%; padding-bottom: 4px;' %> <%= image_tag "rails", title: "Rails", style: 'width: 8%; padding-bottom: 4px;' %> <%= image_tag "postgresql", style: 'width: 8%; padding-bottom: 4px;', title: "PostgreSQL" %><%= image_tag "html-5", style: 'width: 8%; padding-bottom: 4px;', title: "HTML-5" %></p>
+          <p><i class="fab fa-css3 pr-2"></i><%= image_tag "ruby.png", title: "Ruby", style: 'width: 8%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 8%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 8%; padding-bottom: 4px;', title: "PostgreSQL" %><%= image_tag "html-5.png", style: 'width: 8%; padding-bottom: 4px;', title: "HTML-5" %></p>
         </div>
         <p>Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding, PostgreSQL for the database, and bootstrap for the majority of the design.</p>
       </div>
