--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -27,7 +27,7 @@
       <div class="col-md-8 col-12 my-card-content">
         <div class="title d-flex">
           <h4 class="pr-2"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
-          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku.jpg", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
+          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku.png", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
         </div>
         <p>The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and Diana Pinon. This app was made with care by Ruby and Rails, deployed with Heroku. This app brings teachers and students together for niche distance learning.</p>
       </div>
