--- a/app/assets/stylesheets/components/_headers.scss
+++ b/app/assets/stylesheets/components/_headers.scss
@@ -1,3 +1,15 @@
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: 700;
+}
+
+.big-header {
+  top: 35px;
+  right: 16px;
+  font-size: 14rem;
+  position: relative;
+  &:hover {
+    color: $primary;
+  }
 }
