--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,16 +13,11 @@
 
 .portfolio-nav {
   font-size: 2rem;
-  font-weight: 600;
-  .active {
-    color: #140F2D;
-  }
   a {
     padding-right: 1.1rem;
-    color: gray;
-    font-size: 1.4rem;
-    &:hover {
-      text-decoration: none;
-    }
+    font-size: 1.1rem;
+    // &:hover {
+    //   text-decoration: none;
+    // }
   }
 }
