--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 
-<div class="d-flex flex-column">
+<div class="d-flex flex-column mt-3">
 
   <h2>About me</h2>
   <h3>teacher / developer / student </h3>
