--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,75 +1,96 @@
-<div class="border-bottom">
-  <h1>Projects Page</h1>
-  <div id="hr-top" class="circle-line"></div>
-</div>
 
-<div class="py-3">
-  <div class="my-card py-4 mb-4 border-bottom">
-    <div class="row">
-      <div class="d-sm-none d-md-block col-md-4">
-        <%= image_tag "booklub.jpg", style: 'width:15vw;', class: "my-card-image" %>
-      </div>
-      <div class="col-md-8 col-12 my-card-content">
-        <div class="title d-flex">
-          <h4 class="pr-2"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
-          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku.png", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
-        </div>   
-        <p>In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby on Rails app, deployed on heroku, using PostgreSQL. This is an app designed to bring book enthusiasts together with distance book clubs.</p>
-      </div>
-    </div>
-    <div class="circle-line"></div>
-  </div>
-  <div class="my-card py-4 mb-4 border-bottom">
-    <div class="row">
-      <div class="d-sm-none d-md-block col-md-4">
-        <%= image_tag "schoolgoal.jpg", style: 'width:15vw;', class: "my-card-image" %>
-      </div>
-      <div class="col-md-8 col-12 my-card-content">
-        <div class="title d-flex">
-          <h4 class="pr-2"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
-          <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i> <%= image_tag "heroku.png", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
+<section id="header">
+  <a href="#content", style="text-decoration: none; color: black;">
+    <h1 class="big-header">Recent Projects</h1>
+  </a>
+</section>
+
+<section id="content">
+  <div class="py-3">
+    <div class="my-card py-4 mb-4 border-bottom">
+      <div class="row">
+        <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
+          <%= image_tag "booklub.jpg", style: 'width:15vw;', class: "my-card-image" %>
+        </div> -->
+        <div class="col-md-8 col-12 my-card-content">
+          <div class="title d-flex">
+            <h4 class="pr-2"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
+            <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i>
+              <%= image_tag "heroku.png", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %>
+              <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %>
+              <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %>
+              <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
+          </div>
+          <p>In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby
+            on Rails app, deployed on heroku, using PostgreSQL. This is an app designed to bring book enthusiasts together
+            with distance book clubs.</p>
         </div>
-        <p>The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and Diana Pinon. This app was made with care by Ruby and Rails, deployed with Heroku. This app brings teachers and students together for niche distance learning.</p>
       </div>
+      <div class="circle-line"></div>
     </div>
-    <div class="circle-line"></div>
-  </div>
-  <div class="my-card py-4 mb-4 border-bottom">
-    <div class="row">
-      <div class="d-sm-none d-md-block col-md-4">
-        <%= image_tag "mr-cocktail.jpg", style: 'width:15vw;', class: "my-card-image" %>
-      </div>
-      <div class="col-md-8 col-12 my-card-content">
-        <div class="title d-flex">
-          <h4 class="pr-2 d-flex"><a href="#" style="width: 12vw;">Mr. Cocktail</a></h4>
-          <p><i class="fab fa-css3 pr-2"></i><%= image_tag "ruby.png", title: "Ruby", style: 'width: 8%; padding-bottom: 4px;' %> <%= image_tag "rails.png", title: "Rails", style: 'width: 8%; padding-bottom: 4px;' %> <%= image_tag "postgresql.png", style: 'width: 8%; padding-bottom: 4px;', title: "PostgreSQL" %><%= image_tag "html-5.png", style: 'width: 8%; padding-bottom: 4px;', title: "HTML-5" %></p>
+    <div class="my-card py-4 mb-4 border-bottom">
+      <div class="row">
+        <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
+          <%= image_tag "schoolgoal.jpg", style: 'width:15vw;', class: "my-card-image" %>
+        </div> -->
+        <div class="col-md-8 col-12 my-card-content">
+          <div class="title d-flex">
+            <h4 class="pr-2"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
+            <p><i class="fab fa-js-square pr-2"></i><i class="fab fa-sass"></i>
+              <%= image_tag "heroku.png", title: "Heroku", style: 'width: 6%; padding-bottom: 4px;' %>
+              <%= image_tag "ruby.png", title: "Ruby", style: 'width: 6%; padding-bottom: 4px;' %>
+              <%= image_tag "rails.png", title: "Rails", style: 'width: 6%; padding-bottom: 4px;' %>
+              <%= image_tag "postgresql.png", style: 'width: 6%; padding-bottom: 4px;', title: "PostgreSQL" %></p>
+          </div>
+          <p>The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and
+            Diana Pinon. This app was made with care by Ruby and Rails, deployed with Heroku. This app brings teachers and
+            students together for niche distance learning.</p>
         </div>
-        <p>Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding, PostgreSQL for the database, and bootstrap for the majority of the design.</p>
+      </div>
+      <div class="circle-line"></div>
+    </div>
+    <div class="my-card py-4 mb-4 border-bottom">
+      <div class="row">
+        <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
+          <%= image_tag "mr-cocktail.jpg", style: 'width:15vw;', class: "my-card-image" %>
+        </div> -->
+        <div class="col-md-8 col-12 my-card-content">
+          <div class="title d-flex">
+            <h4 class="pr-2 d-flex"><a href="#" style="width: 12vw;">Mr. Cocktail</a></h4>
+            <p><i
+                class="fab fa-css3 pr-2"></i><%= image_tag "ruby.png", title: "Ruby", style: 'width: 8%; padding-bottom: 4px;' %>
+              <%= image_tag "rails.png", title: "Rails", style: 'width: 8%; padding-bottom: 4px;' %>
+              <%= image_tag "postgresql.png", style: 'width: 8%; padding-bottom: 4px;', title: "PostgreSQL" %><%= image_tag "html-5.png", style: 'width: 8%; padding-bottom: 4px;', title: "HTML-5" %>
+            </p>
+          </div>
+          <p>Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding,
+            PostgreSQL for the database, and bootstrap for the majority of the design.</p>
+        </div>
+      </div>
+      <div class="circle-line"></div>
+    </div>
+    <!-- <div class="my-card py-4 mb-4 border-bottom">
+      <div class="row">
+        <div class="d-sm-none d-md-block col-md-4 my-card-image"></div>
+        <div class="col-md-8 col-12 my-card-content">
+          <h4><a href="#">Rails Task Manager</a></h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
+        </div>
+      </div>
+      <div class="circle-line"></div>
+    </div>
+    <div class="my-card border-bottom" style="margin-bottom: -8px;">
+      <div class="row">
+        <div class="d-sm-none d-md-block col-md-4 my-card-image"></div>
+        <div class="col-md-8 col-12 my-card-content">
+          <h4><a href="#">Rails Yelp MVP</a></h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
+        </div>
       </div>
     </div>
-    <div class="circle-line"></div>
+    <div class="circle-line"></div> -->
   </div>
-  <!-- <div class="my-card py-4 mb-4 border-bottom">
-    <div class="row">
-      <div class="d-sm-none d-md-block col-md-4"></div>
-      <div class="col-md-8 col-12 my-card-content">
-        <h4><a href="#">Rails Task Manager</a></h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
-      </div>
-    </div>
-    <div class="circle-line"></div>
-  </div>
-  <div class="my-card border-bottom" style="margin-bottom: -8px;">
-    <div class="row">
-      <div class="d-sm-none d-md-block col-md-4"></div>
-      <div class="col-md-8 col-12 my-card-content">
-        <h4><a href="#">Rails Yelp MVP</a></h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
-      </div>
-    </div>
-  </div>
-  <div class="circle-line"></div> -->
-</div>
+</section>
 
 
 <!-- Booklub: The easiest book club app in the world
