--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<nav class="my-4 portfolio-nav">
+<nav class="portfolio-nav">
   <!-- <a class="my-name" href="#">Sean O'Reilly</a> -->
-  <%= link_to "SEAN O'REILLY", root_path, class: "my-name active tabs" %>
+  <%= link_to "Home", root_path, class: "my-name active tabs" %>
   <%= link_to "About", about_path, class: "tabs" %>
   <%= link_to "Projects", projects_path, class: "tabs" %>
   <%= link_to "Get in touch", new_contact_path, class: "tabs", style: "background: #21FDE1; " %>
