name change mr. cocktail to sir cocktail

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -56,7 +56,7 @@
         </div> -->
         <div class="col-md-8 col-12 my-card-content">
           <div class="title d-flex">
-            <h4 class="pr-2 d-flex"><a href="#" style="width: 12vw;">Mr. Cocktail</a></h4>
+            <h4 class="pr-2 d-flex"><a href="#" style="width: 12vw;">Sir Cocktail</a></h4>
             <p><i
                 class="fab fa-css3 pr-2"></i><%= image_tag "ruby.png", title: "Ruby", style: 'width: 8%; padding-bottom: 4px;' %>
               <%= image_tag "rails.png", title: "Rails", style: 'width: 8%; padding-bottom: 4px;' %>
