--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
   <p><a href="https://www.booklub.xyz/" target="_blank">Booklub: </a>The easiest book club app in the world</p>
   <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal: </a>Connecting educators with young learners</p>
-  <p><a href="#">Mr. Cocktail: </a>An mvp app to track cocktail recipes</p>
+  <p><a href="#">Sir Cocktail: </a>An mvp app to track cocktail recipes</p>
   <p><a href="#">Rails Task Manager: </a>Keep track of you day to day tasks with this simple keep clone</p>
   <p><a href="#">Rails Yelp MVP: </a>A basic mvp to list and locate restaurants</p>
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
