--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -13,7 +13,8 @@
 
   <p>Since early 2015 I’ve worked as an English teacher while exploring the world, setting up in such varied cities as Bangkok, Ho Chi Minh City, and Huelva and Murcia, Spain. I have had the wonderful opportunity to travel and experience so many different cultures across our beautiful planet. Although I loved teaching and was deeply passionate about my students success, I am so excited to be taking on a new creative endeavor to push me even further and one that can challenge me and my desire for problem solving and going beyond what I already know.</p>
 
-  <p>I’m always excited to talk with people about the interesting things they’re working on so if you think you could use my help, hit me up on <a href="https://www.instagram.com/sea.oreilly/" target="_blank">Instagram</a>, <a href="https://twitter.com/seaoreilly" target="_blank">Twitter</a> or drop me an email.</p>
+  <p>I’m always excited to talk with people about the interesting things they’re working on so if you think you could use my help, hit me up on <a href="https://www.instagram.com/sea.oreilly/" target="_blank">Instagram</a>, <a href="https://twitter.com/seaoreilly" target="_blank">Twitter</a> or <a href="mailto:hello@seanoreilly.me?subject = Feedback&body = Message">drop me an email</a></p>
   
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
+
