removed link text-dec

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,8 +16,8 @@
   a {
     padding-right: 1.1rem;
     font-size: 1.1rem;
-    // &:hover {
-    //   text-decoration: none;
-    // }
+    &:hover {
+      text-decoration: none;
+    }
   }
 }
