--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,3 +21,11 @@
     }
   }
 }
+
+@include media-breakpoint-down(sm) {
+  .portfolio-nav {
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+}
