--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,4 @@
 <nav class="portfolio-nav">
-  <!-- <a class="my-name" href="#">Sean O'Reilly</a> -->
   <%= link_to "Home", root_path, class: "my-name active tabs" %>
   <%= link_to "About", about_path, class: "tabs" %>
   <%= link_to "Projects", projects_path, class: "tabs" %>
@@ -7,7 +6,7 @@
 
   <!-- <a href="#">About</a> -->
   <!-- <a href="#">Projects</a> -->
-  <!-- <a href="#">Get in touch</a> -->
+  <!-- <a href="#">Contact</a> -->
 </nav>
 
 
