relocated bottom rails apps to github repos

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,8 +11,8 @@
   <p><a href="https://www.booklub.xyz/" target="_blank">Booklub: </a>The easiest book club app in the world</p>
   <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal: </a>Connecting educators with young learners</p>
   <p><a href="https://sean-mr-cocktail.herokuapp.com/" target="_blank">Sir Cocktail: </a>An mvp app to track cocktail recipes</p>
-  <p><a href="#">Rails Task Manager: </a>Keep track of you day to day tasks with this simple keep clone</p>
-  <p><a href="#">Rails Yelp MVP: </a>A basic mvp to list and locate restaurants</p>
+  <p><a href="https://github.com/seano424/rails-simple-airbnb" target="_blank">Rails Simple Airbnb: </a>Keep track of you day to day tasks with this simple keep clone</p>
+  <p><a href="https://github.com/seano424/rails-yelp-mvp" target="_blank">Rails Yelp MVP: </a>A basic mvp to list and locate restaurants</p>
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
 
