changed links to have a different hover effect

--- a/app/assets/stylesheets/components/_links.scss
+++ b/app/assets/stylesheets/components/_links.scss
@@ -1,7 +1,11 @@
-p > a {
-  font-weight: 600;
+a {
   &:hover {
-    text-decoration: none;
-    color: #00C2D1;
+    color: rgb(255, 0, 127);
+  }
+}
+
+.home-links {
+  &:hover {
+    text-decoration-color: rgb(255, 0, 127);
   }
 }
