changed resume and tried messing around with js

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,6 @@
   <br>
   <p>Hey there! I’m Sean O'Reilly.</p>
 
-  <a href="./app/assets/images/resume.png" download="resume" target="_blank">My resume</a>
   
   <p>In October 2020 I officially began my studies as a web developer by joining the team at Le Wagon Mexico, a highly rated full stack web development bootcamp with locations based all over the world, and this one being based in Mexico City, Mexico. 
 
@@ -15,7 +14,7 @@
 
   <p>Since early 2015 I’ve worked as an English teacher while exploring the world, setting up in such varied cities as Bangkok, Ho Chi Minh City, and Huelva and Murcia, Spain. I have had the wonderful opportunity to travel and experience so many different cultures across our beautiful planet. Although I loved teaching and was deeply passionate about my students success, I am so excited to be taking on a new creative endeavor to push me even further and one that can challenge me and my desire for problem solving and going beyond what I already know.</p>
 
-  <p>I’m always excited to talk with people about the interesting things they’re working on so if you think you could use my help, hit me up on <a href="https://www.instagram.com/sea.oreilly/" target="_blank">Instagram</a>, <a href="https://twitter.com/seaoreilly" target="_blank">Twitter</a> or <a href="mailto:hello@seanoreilly.me?subject = Feedback&body = Message">drop me an email.</a> Feel free to also check out my resume <%= link_to "here", asset_path("resume.pdf"), target: "_blank" %>.</p> 
+  <p>I’m always excited to talk with people about the interesting things they’re working on so if you think you could use my help, hit me up on <a href="https://www.instagram.com/sea.oreilly/" target="_blank">Instagram</a>, <a href="https://twitter.com/seaoreilly" target="_blank">Twitter</a> or <a href="mailto:hello@seanoreilly.me?subject = Feedback&body = Message">drop me an email.</a> Feel free to also check out my resume <%= link_to "here", asset_path("resume.pdf"), download:"resume.pdf" %>.</p> 
   
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
