--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
   <div id="examples">
     <div class="example">
       <span class="hover hover-1">
-        <%= link_to "Projects", projects_path, class: "tabs" %>
+        <%= link_to "Projects", projects_path, class: "tabs", id: "project-tab" %>
       </span>
     </div>
   </div>
@@ -28,12 +28,6 @@
     </div>
   </div>
   
-  
-  
-
-  <!-- <a href="#">About</a> -->
-  <!-- <a href="#">Projects</a> -->
-  <!-- <a href="#">Contact</a> -->
 </nav>
 
 
