--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -13,7 +13,7 @@
           <%= image_tag "booklub.jpg", style: 'width:15vw;', class: "my-card-image" %>
         </div> -->
         <div class="col-lg-8 col-12 my-card-content">
-          <div class="title d-flex flex-md-row flex-column">
+          <div class="title pt-4 pt-lg-1 d-flex flex-md-row flex-column">
             <h4 class="project-title pr-2"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
             <p><i class="fab fa-js-square project-js pr-2"></i><i class="fab fa-sass project-sass"></i>
               <%= image_tag "heroku.png", title: "Heroku", class: 'project-icons-1' %>
@@ -48,8 +48,10 @@
             <p></p>
         </div>
       </div>
+      <a href="#bottom"><i class="fas fa-arrow-down d-flex justify-content-center"></i></a>
       <div class="circle-line"></div>
     </div>
+    <section id="bottom"></section>
     <div class="my-card py-4 mb-4 border-bottom">
       <div class="row">
         <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
