--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -43,7 +43,7 @@
               <%= image_tag "postgresql.png", class: 'project-icons-1', title: "PostgreSQL" %></p>
           </div>
           <p>The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and
-            Diana Pinon. This app was made with care by Ruby and Rails, deployed with Heroku. This app brings teachers and
+            Diana Pinon. This app was made with care by Ruby on Rails, deployed with Heroku. This app brings teachers and
             students together for niche distance learning.</p>
             <p></p>
         </div>
