--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,27 +1,27 @@
 
-<section id="header">
+<section id="header" class="pb-5 pt-4">
   <a href="#content", style="text-decoration: none; color: black;">
     <h1 class="big-header">Recent Projects</h1>
   </a>
 </section>
 
-<section id="content">
-  <div class="py-3">
+<section id="content" class="pt-2">
+  <div class="py-3 pr-4">
     <div class="my-card py-lg-4 mb-4 border-bottom">
       <div class="row">
         <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
           <%= image_tag "booklub.jpg", style: 'width:15vw;', class: "my-card-image" %>
         </div> -->
-        <div class="col-lg-8 col-12 my-card-content">
-          <div class="title pt-4 pt-lg-1 d-flex flex-md-row flex-column">
-            <h4 class="project-title pr-2"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
-            <p><i class="fab fa-js-square project-js pr-2"></i><i class="fab fa-sass project-sass"></i>
+        <div class="col-12 my-card-content text-right">
+          <div class="title pt-4 pt-lg-1 d-flex flex-md-row-reverse flex-column">
+            <h4 class="project-title pl-4"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
+            <p class="project-p"><i class="fab fa-js-square project-js pr-2"></i><i class="fab fa-sass project-sass"></i>
               <%= image_tag "heroku.png", title: "Heroku", class: 'project-icons-1' %>
               <%= image_tag "ruby.png", title: "Ruby", class: 'project-icons-1' %>
               <%= image_tag "rails.png", title: "Rails", class: 'project-icons-1' %>
               <%= image_tag "postgresql.png", class: 'project-icons-1', title: "PostgreSQL" %></p>
           </div>
-          <p>In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby
+          <p class="project-p">In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby
             on Rails app, deployed on heroku, using PostgreSQL. This is an app designed to bring book enthusiasts together
             with distance book clubs.</p>
         </div>
@@ -33,40 +33,40 @@
         <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
           <%= image_tag "schoolgoal.jpg", style: 'width:15vw;', class: "my-card-image" %>
         </div> -->
-        <div class="col-lg-8 col-12 my-card-content">
+        <div class="col-12 my-card-content">
           <div class="title d-flex flex-md-row flex-column">
-            <h4 class="project-title pr-2"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
-            <p><i class="fab fa-js-square project-js pr-2"></i><i class="fab fa-sass project-sass"></i>
+            <h4 class="project-title pr-4"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
+            <p class="project-p"><i class="fab fa-js-square project-js pr-2"></i><i class="fab fa-sass project-sass"></i>
               <%= image_tag "heroku.png", title: "Heroku", class: 'project-icons-1' %>
               <%= image_tag "ruby.png", title: "Ruby", class: 'project-icons-1' %>
               <%= image_tag "rails.png", title: "Rails", class: 'project-icons-1' %>
               <%= image_tag "postgresql.png", class: 'project-icons-1', title: "PostgreSQL" %></p>
           </div>
-          <p>The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and
+          <p class="project-p">The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and
             Diana Pinon. This app was made with care by Ruby on Rails, deployed with Heroku. This app brings teachers and
             students together for niche distance learning.</p>
-            <p></p>
+            <p class="project-p"></p>
         </div>
       </div>
       <a href="#bottom"><i class="fas fa-arrow-down d-flex justify-content-center"></i></a>
       <div class="circle-line"></div>
     </div>
     <section id="bottom"></section>
-    <div class="my-card py-4 mb-4 border-bottom">
+    <div class="my-card pr-4 py-4 mb-4 border-bottom">
       <div class="row">
         <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
           <%= image_tag "mr-cocktail.jpg", style: 'width:15vw;', class: "my-card-image" %>
         </div> -->
-        <div class="col-lg-8 col-12 my-card-content">
-          <div class="title d-flex flex-md-row flex-column">
-            <h4 class="pr-2 d-flex"><a href="https://sean-mr-cocktail.herokuapp.com/" class="project-title-cocktail" target="_blank">Sir Cocktail</a></h4>
-            <p><i
+        <div class="col-12 my-card-content text-right">
+          <div class="title d-flex flex-md-row-reverse flex-column">
+            <h4 class="d-flex"><a href="https://sean-mr-cocktail.herokuapp.com/" class="project-title-cocktail" target="_blank">Sir Cocktail</a></h4>
+            <p class="project-p"><i
                 class="project-css fab fa-css3 pr-2"></i><%= image_tag "ruby.png", title: "Ruby", class: 'project-icons' %>
               <%= image_tag "rails.png", title: "Rails", class: 'project-icons' %>
               <%= image_tag "postgresql.png", class: 'project-icons', title: "PostgreSQL" %><%= image_tag "html-5.png", class: 'project-icons', title: "HTML-5" %>
             </p>
           </div>
-          <p>Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding,
+          <p class="project-p">Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding,
             PostgreSQL for the database, and bootstrap for the majority of the design.</p>
         </div>
       </div>
@@ -77,7 +77,7 @@
         <div class="d-sm-none d-md-block col-md-4 my-card-image"></div>
         <div class="col-lg-8 col-12 my-card-content">
           <h4><a href="#">Rails Task Manager</a></h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
+          <p class="project-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
         </div>
       </div>
       <div class="circle-line"></div>
@@ -87,7 +87,7 @@
         <div class="d-sm-none d-md-block col-md-4 my-card-image"></div>
         <div class="col-lg-8 col-12 my-card-content">
           <h4><a href="#">Rails Yelp MVP</a></h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
+          <p class="project-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod adipisci totam aspernatur quisquam, veritatis at dolorum. Modi est vero delectus.</p>
         </div>
       </div>
     </div>
